fix art text align

--- a/src/css/sections/ArtSection.scss
+++ b/src/css/sections/ArtSection.scss
@@ -96,6 +96,7 @@
 
     margin: 0;
     text-shadow: 0 0 10px $background-color;
+    text-align: center;
 
     font-family: $art-name-font-family;
     font-size: $art-name-font-size;
